# Shipwright-Android

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  easy_custom_icon_converter.py  easy_custom_texture_converter.py  rebuild_soh_otr.bat
soh/: CMakeLists.txt
soh/assets/: soh_assets.h
soh/assets/custom/lang/: en_US.json
soh/expansions/NEI/: dynamic_item_names.cpp  imstb_truetype.h
soh/expansions/sm64/: Sm64CapsHud.cpp  libsm64.h  mario_cap_model.c  omm_cap_model.c  sm64_mario.c  sm64_mario.h  sm64_mario_items.c  sm64_mario_render.c  sm64_mario_surfaces.c
soh/expansions/ssbb/: ssbb_action_defs.h  ssbb_anim.h  ssbb_character.c  ssbb_character.h  ssbb_companion.c  ssbb_companion.h  ssbb_global.c  ssbb_hitbox.h  ssbb_skin.c  ssbb_skin.h  ssbb_spawn.c  ssbb_spawn.h
soh/expansions/ssbb/actors/: ssbb_thunder.c  ssbb_thunder.h  ssbb_thunder_jolt.c  ssbb_thunder_jolt.h
soh/expansions/ssbb/characters/: .clang-format  pikachu_ssbb_Wait1.c  pikachu_ssbb_Wait1.h  pikachu_ssbb_Wait1_ssbb.c  pikachu_ssbb_Wait1_ssbb.h  pikachu_ssbb_Wait3.h  pikachu_ssbb_Wait3_ssbb.c  pikachu_ssbb_all_anims.c  pikachu_ssbb_all_anims.h  pikachu_ssbb_dl.c  pikachu_ssbb_dl.h  pikachu_ssbb_register.h  pikachu_ssbb_shadow.c  pikachu_ssbb_skel.c  pikachu_ssbb_skel.h  pikachu_ssbb_skin.c  pikachu_ssbb_skin.h  pikachu_ssbb_tex.h  pikachu_ssbb_voice.h
soh/expansions/sw97/: sw97_compat.h  sw97_config.h  sw97_init.cpp  sw97_router.c  sw97_save.inc.c
soh/expansions/sw97/physics/: hat_adult.inc.c  hat_child.inc.c  physics.inc.c  physics_data.h  z64physics.h
soh/expansions/sw97/player/: sw97_player_behavior.inc.c  sw97_player_hooks.inc.c
soh/expansions/sw97/scenes/: sw97_scene_table.inc.c
soh/expansions/sw97/ui/: sw97_hud.inc.c  sw97_tour.inc.c
soh/include/: functions.h  variables.h  z64.h  z64audio.h  z64collision_check.h  z64item.h  z64player.h  z64save.h
soh/mods/: extended_equipment.c  extended_equipment.h  extended_inventory.c  extended_inventory.h  extended_player.c  extended_player.h
soh/mods/actors/: deku_flower_assets.h  deku_nut_projectile.c  elegy_shell_assets.h  somaria_cubes.c  somaria_cubes.h  spiritual_stone_statue.c  spiritual_stone_statue.h
soh/mods/actors/pikachu/: convert_textures.py  pika_wait.c  pika_wait.h  pikachu.c  pikachu.h  pikachuDL.c  pikachuDL.h  pikachu_based_link.c  pikachu_based_link.h  pikachu_based_link_skel.c  pikachu_based_link_skel.h  pikachu_behavior.c  pikachu_behavior.h  pikachu_skel.c  pikachu_skel.h
soh/mods/anim_translator/: anim_translator_inline_test.h  mm_anim_loader.c  mm_anim_loader.h
soh/mods/broken_items/: broken_items.c  broken_items.h
soh/mods/equipment/: ext_equip_behavior.c  ext_equip_icons.c  ext_equip_names.c
soh/mods/equipment/behaviors/: equip_breastplate.c  equip_byrna.c  equip_champion.c  equip_divine_shield.c  equip_dragonscale.c  equip_foursword.c  equip_ikana.c  equip_ikaxe.c  equip_ikaxe_throw.inc.c  equip_magiccape.c  equip_pegasus.c  equip_pendant.c
soh/mods/items/: CONTROLS.md  STRUCTURE.md  custom_icons.c  custom_items.h  custom_items_common.c  custom_names.c
soh/mods/items/helpers/: bremen_follower_actor.c  bremen_follower_actor.h  camera_helper.c  camera_helper.h  combat_helper.c  combat_helper.h  cutscene_helper.c  cutscene_helper.h  equip_helper.c  equip_helper.h  fx_helper.c  fx_helper.h  (+12 more)
soh/mods/mm_sources/: mm_anims.h  mm_anims_data.c
soh/mods/o2r_loader/: o2r_loader.cpp  o2r_loader.h
soh/mods/pak_loader/: pak_loader.cpp  pak_loader.h
soh/mods/sound_translator/: mm_audio_sfx.cpp  mm_audio_sfx.h  mm_audio_sfx_dispatch.cpp  mm_audio_sfx_params.cpp  mm_bgm_loader.cpp  mm_bgm_loader.h  mm_bgm_names.h  mm_sfx_ids.h  mm_sfx_loader.h  mm_sfx_synth.h  mm_sfx_synth_backend.cpp  mm_sfx_synth_common.h  mm_sfx_synth_ctx.h  mm_sfx_synth_data.cpp  mm_sfx_synth_effects.cpp  mm_sfx_synth_glue.cpp  mm_sfx_synth_loader.cpp  mm_sfx_synth_playback.cpp  mm_sfx_synth_seqplayer.cpp  mm_sfx_synth_types.h  mm_soundfont.h
soh/mods/spiritual_stones/: spiritual_stones.cpp  spiritual_stones.h
soh/mods/transformation_masks/: boss_super_damage.h  clm_behavior.cpp  garo_form.cpp  garo_hybrid_render.cpp  garo_hybrid_render.h  garo_post_limb.cpp  garo_post_limb.h  garo_skin.cpp  garo_skin.h  gerudo_form.cpp  gerudo_form.h  gerudo_hybrid_render.cpp  gerudo_hybrid_render.h  gerudo_post_limb.cpp  gerudo_post_limb.h  gerudo_skin.cpp  gerudo_skin.h  gerudo_voice.cpp  gerudo_voice.h  mm_compat.h  mm_form_combat.c  mm_mask_wear.cpp  mm_mask_wear.h  mm_player_data.c  mm_player_form.cpp  mm_player_struct.h  mm_router.c  pikachu_form copy.cpp  pikachu_form.cpp  pikachu_hud.cpp  transformation_masks.c  transformation_masks.h
soh/mods/voice_pack/: voice_pack.cpp  voice_pack.h
soh/soh/: ActorDB.cpp  GameVersions.h  GbiWrap.cpp  OTRGlobals.cpp  OTRGlobals.h  ResourceManagerHelpers.cpp  ResourceManagerHelpers.h  SaveManager.cpp  stubs.c  util.cpp
soh/soh/Enhancements/: ArrowCycle.cpp  BlueFireArrows.cpp  BombArrows.cpp  DarkArrowLifesteal.cpp  InjectItemCounts.cpp  SunlightArrows.cpp  SwitchAge.h  Warping.cpp  bootcommands.c  customequipment.cpp  debugconsole.cpp  enemyrandomizer.cpp  enemyrandomizer.h  gameplaystats.cpp  kaleido.cpp  kaleido.h  mod_menu.cpp  mod_menu.h  mods.cpp  mods.h  timesaver_hook_handlers.cpp
soh/soh/Extractor/: Extract.cpp
soh/soh/Network/: HarpoonToggle.h
soh/soh/Notification/: Notification.cpp
soh/soh/ObjectExtension/: ObjectExtension.h
soh/soh/SohGui/: ImGuiUtils.cpp  ImGuiUtils.h  Menu.cpp  Menu.h  MenuTypes.h  SohGui.cpp  SohGui.hpp  SohMenu.cpp  SohMenu.h  SohMenuDevTools.cpp  SohMenuEnhancements.cpp  SohMenuNEI.cpp  SohMenuNetwork.cpp  SohMenuRandomizer.cpp  SohMenuSettings.cpp  SohMenuWindWakerStyle.cpp  SohModals.cpp  UIWidgets.hpp
soh/soh/config/: ConfigMigrators.h
soh/src/code/: audio_load.c  code_800E4FE0.c  code_800F7260.c  code_800F9280.c  main.c  z_actor.c  z_bgcheck.c  z_camera.c  z_collision_check.c  z_draw.c  z_en_item00.c  z_fbdemo_circle.c  z_horse.c  z_inventory.c  z_lib.c  z_lifemeter.c  z_lights.c  z_message_PAL.c  z_parameter.c  z_play.c  z_player_lib.c  z_scene.c  z_sram.c
(+1902 files in other folders)
